objects/tffa__SessionInformation__c.object
<CustomObject>
    <description>Session store to capture session related information created for different entities within the application</description>
    <fields>
        <fullName>tffa__AccessToken__c</fullName>
        <description>Holds encrypted value of Access token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Access token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__AutoRefresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the session information is refreshed periodically using a batch job.</description>
        <label>Auto refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current session is expired</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExpiresOn__c</fullName>
        <description>Datetime value on which session expires</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expires on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IdentityType__c</fullName>
        <description>Indicates the identity type of the current session. e.g. ENTITY, NAMED_PRINCIPAL</description>
        <label>Identity type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SessionIdentityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Key__c</fullName>
        <description>Unique identifier of the key for which session is created. e.g sales:partyId, sales:submissionId:partyId</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>Provider of the current session information e.g. CRM, GCP, MOMENTUM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RefreshToken__c</fullName>
        <description>Holds encrypted value of Refresh token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Refresh token</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Token__c</fullName>
        <description>Holds encrypted value of session token (Deprecated)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of the session created e.g. OTP, AUTH</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SessionType</valueSetName>
        </valueSet>
    </fields>
    <label>SessionInformation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SessionInformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SessionInformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>